--- a/index.html
+++ b/index.html
@@ -134,34 +134,34 @@
 
     <!-- Lightbox部分 -->
     <div class="lightbox" id="kiwi1">
-        <a href="#"><img src="./creations/kiwi/kiwi1.png" alt="私はグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi1.png" alt="私はグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi2">
-        <a href="#"><img src="./creations/kiwi/kiwi2.png" alt="グラサンのいいね！"></a>
+        <a href="#"><img src="kiwi/kiwi2.png" alt="グラサンのいいね！"></a>
     </div>
     <div class="lightbox" id="kiwi3">
-        <a href="#"><img src="./creations/kiwi/kiwi3.png" alt="走るグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi3.png" alt="走るグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi4">
-        <a href="#"><img src="./creations/kiwi/kiwi4.png" alt="喜び全開グラサン"></a>
+        <a href="#"><img src="kiwi/kiwi4.png" alt="喜び全開グラサン"></a>
     </div>
     <div class="lightbox" id="kiwi6">
-        <a href="#"><img src="./creations/kiwi/kiwi6.png" alt="爆睡グラサン"></a>
+        <a href="#"><img src="kiwi/kiwi6.png" alt="爆睡グラサン"></a>
     </div>
     <div class="lightbox" id="kiwi7">
-        <a href="#"><img src="./creations/kiwi/kiwi7.png" alt="びっくりグラサン"></a>
+        <a href="#"><img src=".kiwi/kiwi7.png" alt="びっくりグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi8">
-        <a href="#"><img src="./creations/kiwi/kiwi8.png" alt="涙のグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi8.png" alt="涙のグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi9">
-        <a href="#"><img src="./creations/kiwi/kiwi9.png" alt="大あくびグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi9.png" alt="大あくびグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi10">
-        <a href="#"><img src="./creations/kiwi/kiwi10.png" alt="照れるグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi10.png" alt="照れるグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi11">
-        <a href="#"><img src="./creations/kiwi/kiwi11.png" alt="悔しいグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi11.png" alt="悔しいグラサン"></a>
     </div>
 
     <!-- Instagram・ブログボタン -->
