--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: none;
             position: fixed;
             z-index: 999;
-            padding: 1em;
+            padding: 1rem;
             background: rgba(0,0,0,0.8);
             top: 0;
             left: 0;
@@ -149,7 +149,7 @@
         <a href="#"><img src="kiwi/kiwi6.png" alt="爆睡グラサン"></a>
     </div>
     <div class="lightbox" id="kiwi7">
-        <a href="#"><img src=".kiwi/kiwi7.png" alt="びっくりグラサン"></a>
+        <a href="#"><img src="kiwi/kiwi7.png" alt="びっくりグラサン"></a>
     </div>
     <div class="lightbox" id="kiwi8">
         <a href="#"><img src="kiwi/kiwi8.png" alt="涙のグラサン"></a>
@@ -185,3 +185,4 @@
 
 </body>
 </html>
+
