--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </h1>
 
         <nav class="bottom-nav">
-            <a href="index.html">🏠 Home</a>
+            <a href="https://protan-forest.vercel.app/">🏠 Home</a>
             <a href="me.html">☕ ME</a>
             <a href="contact.html">📩 Contact</a>
         </nav>
@@ -185,5 +185,6 @@
 
 </body>
 </html>
+
 
 
