--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <nav class="bottom-nav">
             <a href="https://protan-forest.vercel.app/">🏠 Home</a>
-            <a href="./creations.html"> 📓Creation</a>
+            <a href="creations.html"> 📓Creation</a>
             <a href="../me.html">☕ ME</a>
             <a href="../contact.html">📩 Contact</a>
         </nav>
@@ -186,6 +186,7 @@
 
 </body>
 </html>
+
 
 
 
