--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
         <nav class="bottom-nav">
             <a href="https://protan-forest.vercel.app/">🏠 Home</a>
-            <a href="creations.html"> 📓Creation</a>
-            <a href="../me.html">☕ ME</a>
-            <a href="../contact.html">📩 Contact</a>
+            <a href="https://protan-forest.vercel.app/creations.html"> 📓Creation</a>
+            <a href="https://protan-forest.vercel.app/me.html">☕ ME</a>
+            <a href="https://protan-forest.vercel.app/contact.html">📩 Contact</a>
         </nav>
     </header>
 <body>
@@ -186,6 +186,7 @@
 
 </body>
 </html>
+
 
 
 
